--- a/src/main/resources/com/example/csit228f2_2/hello-view.fxml
+++ b/src/main/resources/com/example/csit228f2_2/hello-view.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="367.0" prefWidth="423.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228f2_2.HelloController">
+<AnchorPane prefHeight="367.0" prefWidth="423.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228f2_2.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <children>
       <ProgressBar fx:id="pbLife" layoutX="112.0" layoutY="255.0" prefWidth="200.0" progress="0.69" />
       <ToggleButton fx:id="tbNight" layoutX="356.0" layoutY="32.0" mnemonicParsing="false" onAction="#onNightModeClick" text="Night Mode" />
-      <Text fx:id="txtName" layoutX="65.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+      <Text fx:id="txtName" layoutX="66.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
             <Font name="Rockwell Bold" size="71.0" />
          </font>
