Added some home page fxml for succesful login

--- a/src/main/resources/com/example/csit228f2_2/register.fxml
+++ b/src/main/resources/com/example/csit228f2_2/register.fxml
@@ -29,7 +29,7 @@
                         <Insets bottom="10.0" left="10.0" top="10.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" text="Button">
+                  <Button mnemonicParsing="false" text="Back-&gt;">
                      <HBox.margin>
                         <Insets bottom="10.0" top="10.0" />
                      </HBox.margin>
