--- a/src/main/resources/com/example/csit228f2_2/index.fxml
+++ b/src/main/resources/com/example/csit228f2_2/index.fxml
@@ -28,17 +28,18 @@
                   <Font name="Corbel Bold" size="96.0" />
                </font>
             </Text>
-            <TextField prefHeight="26.0" prefWidth="228.0" promptText="Enter Username" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <PasswordField prefHeight="26.0" prefWidth="228.0" promptText="Enter Password" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+            <TextField fx:id="tfUsername" prefHeight="26.0" prefWidth="228.0" promptText="Enter Username" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <PasswordField fx:id="tfPassword" prefHeight="26.0" prefWidth="228.0" promptText="Enter Password" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.valignment="TOP" />
             <HBox alignment="TOP_RIGHT" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <children>
-                  <Button mnemonicParsing="false" text="Log In" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="btnLogIn" mnemonicParsing="false" onAction="#onLogInCheck" text="Log In" HBox.hgrow="ALWAYS" />
                   <Button fx:id="btnRegister" mnemonicParsing="false" onAction="#onBtnRegisterClick" prefHeight="26.0" prefWidth="63.0" text="Register" HBox.hgrow="ALWAYS" />
                </children>
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
             </HBox>
+            <VBox prefHeight="200.0" prefWidth="100.0" />
          </children>
       </GridPane>
    </children>
