--- a/src/main/resources/com/example/csit228f2_2/home.fxml
+++ b/src/main/resources/com/example/csit228f2_2/home.fxml
@@ -14,7 +14,7 @@
                   <Text fx:id="txtName" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" textAlignment="CENTER" />
                   <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <Button mnemonicParsing="false" text="Profile" />
+                        <Button fx:id="btnProfile" mnemonicParsing="false" onAction="#changeToProfile" text="Profile" />
                         <Button mnemonicParsing="false" text="Settings" />
                      </children>
                   </HBox>
@@ -72,7 +72,7 @@
          <bottom>
             <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="600.0" BorderPane.alignment="CENTER_RIGHT">
                <children>
-                  <Button mnemonicParsing="false" text="Exit -&gt;" />
+                  <Button fx:id="btnExit" mnemonicParsing="false" text="Exit -&gt;" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
