--- a/src/main/resources/com/example/csit228f2_2/deleteAccount.fxml
+++ b/src/main/resources/com/example/csit228f2_2/deleteAccount.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228f2_2.homeController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="tryBGColor" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228f2_2.homeController">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -35,7 +35,10 @@
                </children></VBox>
             <HBox alignment="TOP_RIGHT" prefHeight="84.0" prefWidth="579.0" spacing="10.0" VBox.vgrow="ALWAYS">
                <children>
-                  <Button fx:id="btnConfirmDel" mnemonicParsing="false" onAction="#deleteAccount" text="CONFIRM" />
+                  <Button fx:id="btnConfirmDel" mnemonicParsing="false" onAction="#deleteAccount" style="-fx-background-color: red;" text="CONFIRM" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
