--- a/src/main/resources/com/example/csit228f2_2/styles.css
+++ b/src/main/resources/com/example/csit228f2_2/styles.css
@@ -1,3 +1,33 @@
-.root {
-    -fx-background-color: black;
+.tryBGColor{
+    -fx-background-color:
+                linear-gradient( #63c3dc, #085593),
+                radial-gradient(center 50% 50%, radius 50%, #FFFFFF33, #00000033);
 }
+
+.btnColorRed {
+    -fx-background-color: red;
+}
+
+.anchorpaneBackCol {
+    -fx-background-color: linear-gradient(to bottom, #63c3dc, #085593);
+}
+
+.img{
+    -fx-background-image: url("LOGO.png");
+    -fx-background-position: center;
+}
+
+.img2 {
+    -fx-background-image: url("LOGO.png");
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+}
+
+.anchorpaneImgTopRight {
+    -fx-background-image: url("new1.png");
+    -fx-background-position: top right;
+    -fx-background-repeat: no-repeat;
+}
+
+
+
